test/Harper/Tests/Bad/DeclaredIdentifiersAreNotInScopeOnRightHandSideOfDeconstruction.out
Error: undeclared identifier `f`.
During evaluation of:
 f
Located at line 7 column 21

Execution terminated with an error: type error.